# ChangeLog for dev-ruby/sexp_processor
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sexp_processor/ChangeLog,v 1.38 2015/01/18 03:10:02 mrueg Exp $

*sexp_processor-4.4.5 (18 Jan 2015)

  18 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +sexp_processor-4.4.5.ebuild:
  Version bump. Add ruby22 target.

  10 Nov 2014; Manuel Rüger <mrueg@gentoo.org> sexp_processor-3.2.0-r1.ebuild,
  sexp_processor-3.2.0.ebuild, sexp_processor-4.2.1.ebuild,
  sexp_processor-4.4.3-r1.ebuild, sexp_processor-4.4.3.ebuild,
  sexp_processor-4.4.4.ebuild:
  Drop jruby target.

*sexp_processor-4.4.4 (20 Aug 2014)

  20 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +sexp_processor-4.4.4.ebuild:
  Version bump.

*sexp_processor-3.2.0-r1 (13 Aug 2014)

  13 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +sexp_processor-3.2.0-r1.ebuild:
  Add ruby20, ruby21 target.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> sexp_processor-3.2.0.ebuild,
  sexp_processor-4.2.1.ebuild, sexp_processor-4.4.3-r1.ebuild,
  sexp_processor-4.4.3.ebuild:
  Remove trailing '.' from DESCRIPTION.

*sexp_processor-4.4.3-r1 (14 May 2014)

  14 May 2014; Manuel Rüger <mrueg@gentoo.org> +sexp_processor-4.4.3-r1.ebuild,
  -sexp_processor-4.4.1.ebuild:
  Add ruby21 target. Cleanup old.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> sexp_processor-3.2.0.ebuild,
  sexp_processor-4.2.1.ebuild, sexp_processor-4.4.1.ebuild,
  sexp_processor-4.4.3.ebuild:
  Remove ree18 and ruby18 target.

*sexp_processor-4.4.3 (25 Mar 2014)

  25 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +sexp_processor-4.4.3.ebuild:
  Version bump.

  19 Dec 2013; Manuel Rüger <mrueg@gentoo.org> -sexp_processor-3.0.5.ebuild,
  -sexp_processor-4.3.0-r1.ebuild, -sexp_processor-4.4.0.ebuild:
  Cleanup old.

  19 Dec 2013; Akinori Hattori <hattya@gentoo.org> sexp_processor-4.2.1.ebuild:
  ia64 stable wrt bug #483708

*sexp_processor-4.4.1 (15 Dec 2013)
