@@ -1,8 +1,12 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST sexp_processor-3.2.0.gem 35328 SHA256 5951f8d33ede2f68686c701142c6cc1004d6f525b0aa8e8279a1bf075542b0f0 SHA512 1a0330dcccf36ededcba07f0dccecb9964277c82541b66c416f3fc6513da3a785597f22115f7434a0a95401a334740620a734e1a6f71b73b4f0152c88b641c2c WHIRLPOOL 47f7256ffa199d862068886493ec95487ebe6003f60f6c66d16f99e7a9659bed7538d5bc2b2c5966dbfd33defd55eba6ccbf723a0cad4bfdf0519599aa1124c8
 DIST sexp_processor-4.2.1.gem 35328 SHA256 dfc3eef6ef13c5750c3faab782c4db6c74a7bcc5d03e56e4edeec21aab034185 SHA512 9dd079dbd374d33e1bfa0e4002946993e355425281873e612667feeb2f521f8eceab22d6f68b5b2a8063dd94f0661ab2a583f212f22c1322d4dfa1bff063d4a7 WHIRLPOOL 586fe27770a3fd6747c66aad14cfd1311faae83b55ed5f057f285721c7a4a756174fcb3b0db91d17aee351a0c082bb82371d72b3c2d0ca1c0d7926fba6b9ba8c
 DIST sexp_processor-4.4.3.gem 38400 SHA256 b3eb96da1fe998f1c00665a9c645878518134cca7c35d39c4bb716e866f4cc57 SHA512 b8456165978ce7bc0ed13842971fac0babbe1a302d17fc1681085e78475438b459c0b7a24352f317b4e6f1d35b7d6286ffd12cd3a95b5110e9a8a2c4c086138c WHIRLPOOL 9e25508e1a1963dbe2b34a82d8e8e24064b4b1f4e54dacedc3f2cf4ac4dff4727e2461a1d69e2c6769bf40c9f3aeb37f3206c686d9e21a77a78b56de5701d8c8
 DIST sexp_processor-4.4.4.gem 38912 SHA256 43cab5a67ca409d62411f869ddb7a0a4de0988b489d3f1d610d9b6e521964fd5 SHA512 b17c2a6a5675a5244a935f4d3024bcb6eadb667a189a406b4f890b29361042a5523df55cdb5ee82e60180eacc5999a163f2e88a0b70113aa42aa50cffbdfe1e2 WHIRLPOOL 01d7193d6e3c74d517f108b8aa778fcbd701987d20ee503ae9947ce60a0b3824d1dfae2ca6a0bd4f7b314cfa8c22fb347db0b6fef218833a022f2aec351d37fb
 DIST sexp_processor-4.4.5.gem 38912 SHA256 af8713761f1b6604865830c54324e57c33e7cc05107ebdbee4e6d458f8f8fe7c SHA512 6190cc85f7c67ade97725459fd415593fd9f9b405e004b677543c5db40c364d12627587218fe500d46809ccde316dc7d59a647568dfa10bd8eb892af9c20a05e WHIRLPOOL fdea17c49a95e8241b90148710acf7c60f27fb0ddc2fe31a08d095b61fd5c5540dbb88415be47597a94754b89a0023c0273d1f5b7f4280a120cb293d38e9c53b
+DIST sexp_processor-4.5.1.gem 38912 SHA256 1456a9be103bf1de0d34ff6980b77a5a72cf3d4b35bbd2182ac62506981a234c SHA512 9cf997a34c57598c7c09392827453cc7c1233fa335261e9f177f0fb70904d7f4a61d8eb819dab040eae8025c1c91fbc4e09f2aae5f02a457ad19f7732e9552c5 WHIRLPOOL cc232f198e018bbd75b8e860ed921b5326d5067dfd1aaacca3613bf787617a99b0c2221da6b072788e453ac2ae93188f8512672d46f89e159642a2bf01343491
 EBUILD sexp_processor-3.2.0-r1.ebuild 931 SHA256 a9565b57fbae63bba25c1c958fbcd0aaf42a81e37db9fbbbeab0a63cf956d417 SHA512 466272aeac6eb18a9456a1a42b8f8a58c58f2d123bb5b51f8927617ceb3635ce372428b3dfd01ff52e90c9e14ca7ba205fd9b71596413c4b0933e40a81fa37c4 WHIRLPOOL 935644973359f4ad283e425d6a545fdc0f79ede250a50cefa29300bc0ddf29290292d2f6ef6c89a7ec54063554571520ce6206ccb6dd9afcb32a5063b816e946
 EBUILD sexp_processor-3.2.0.ebuild 841 SHA256 5a73e134e78b6c7ea0f9eb8abcc7e7cca50ed4ca61c8de646bfbf195cae79bfb SHA512 bec2f5519922c611d0870f1192b974d0a291aaf24863f65f745945e693e72730a5effb45098be3600d6fa71918082feb84901954d7319d7d0dae1d70bb8e4193 WHIRLPOOL 9a272fd0c173f030d21fa345e5daf905299e43a9d00847664ddef729bf4b853677cc29d1e6ae9dc692c0951cd212caa8145ef967e2859552cc5366a132a2c76a
 EBUILD sexp_processor-4.2.1.ebuild 841 SHA256 97777c17f94f7d49d8a5236a717770cc232073afbf91679b39aca61ba3f17743 SHA512 38986de6813d991d559c46071cfe33d94c44729e8a06aee2f709996aa3d3fcf251d75f7088fd8831e0647c1cdf887f5b8e924d9a0fb357a78a3a33ba1aef6e2b WHIRLPOOL f22495148545a031c770cd471d4e910d1f9c71c13a11d970507ceddfb26cae7a43751794d3c46bb7370035d617321489a0e1d9ddb096ce35b60327df524671f5
@@ -10,5 +14,13 @@ EBUILD sexp_processor-4.4.3-r1.ebuild 865 SHA256 706c537b82093edc8efe4730f0db749
 EBUILD sexp_processor-4.4.3.ebuild 855 SHA256 054be4a26edf83ae5e30f1535a23a769e1118d7757af9ff658bfa7be887d5d2f SHA512 7cf74f7d3cf5958ed68bf00a4bdfc9bc759da1b4eef73afc1a4440cdda49a249c0f783801c78484b66fe9353a7dfb1dbca61ee6cf6156fb13bae9038b0a6c77a WHIRLPOOL 727762e543a8ddc0cb54c43d2963a1ffefa1a677cdd2540c919c039c9634aa5b88c0d8b24ab6cb9611122c2910c02d5aef00d3d068105e3f0270924ec66fd7ee
 EBUILD sexp_processor-4.4.4.ebuild 862 SHA256 eada58b1a6d153bb7b6c68db49b0334be9b89cf103264d643486ee86f7d1e87e SHA512 ae32d5b3c6e088363954fd1fd14bbc507bb950badb00d21a3323be36d63e8ba125824f99e79a451a11a27ec90bab8a1394b500dfe8914dc5240c75d8b8e120fb WHIRLPOOL 1de8abdaa5252d5cab2fc91dd810e81228bd848481ff17c054d26bb5827427b30ab8b358a5304e1d628c6a73f2f7e2bc8e81e5179ea50f9a37ee1123121b7f7a
 EBUILD sexp_processor-4.4.5.ebuild 882 SHA256 40304d9681fdeb39402ddbffc30f13e763396350a076de3ba1449be438b4f77d SHA512 2a164bccc1a1b00c6275c1899c06880734d6ff657034f12af2137099d71e8fa01337e9b89fb6b7a4c3de6aa942c2b13ede8dfc180e99b8b5c2df8afaf933dc9a WHIRLPOOL 9e161f10ffc83f675aa17ec6e980e02db5f5bb8a51cc1beaa27bf443e6c4c636969d7fb83284aea24d3594bfaab10bab36fa5706281f317b3dfe9d04d58c835f
-MISC ChangeLog 11269 SHA256 419c3e40785334aaca0176756f6bfc6bf2f3a06bc58b70ca9b34f46fec2370d2 SHA512 5f2dfaab8e42f3d0408093e4efa30f791c26c2e2f06734ba43e3d40d518242ee04ab30a0157a640f1105352a771c1c150f3c68acefb4d3595feac0828769f1d9 WHIRLPOOL 123315b70f85135f5b2daf302cde855b7c5ca5dc320a54fddfe5d0634ea20d042f366f04c06bdfddf9b0156bddfe6910abd996a5c730920727b56b0083d05c94
+EBUILD sexp_processor-4.5.1.ebuild 883 SHA256 418824e311805ead705a93204fe8f1f1b04622e7fca3957823900a1d554b9aed SHA512 a063f833010ee92b39daa9aab3d3e3a594ee2a2c24d2bcb11fe382ee2fb52de21d9a690c7f79a1ce7c4a21bd5eaad522603a6e4cabc44d3ed641fe6a7001db11 WHIRLPOOL 7ba05abe92e8c147bac4bd89899fc6dc2d23f9148d2897046b221d692d5325fe1b9f5e24ba0ed05f7dfd4d6a44fb5762ff5e59c278b9ba1b9e2a91f251762874
+MISC ChangeLog 11404 SHA256 072f9644e74c38e258db85b17834b8ba0253efdfb9eb8d7a1f9fe8fb234033ab SHA512 9333f31de7f89bb6a115c872a559da4b5a9a4edd3c27ece58d490da0863a1b94dc06c1cac05e05da0de21deefcb5a25c0741c95cc9db2d4ef480132c848febe0 WHIRLPOOL f693e60b1aed5d8b81c85ead7f96146c044dc86ba3f9ace575cd52d16a82f1961b82970e185f0bc0c9c4c171794e0c007e08bafa50870b6d91b57ef92efff9b1
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlU/EoYACgkQiIP6VqMIqNfYRgD9Eq681gOaZWS+Dr/OqigVQBoq
+eBFsS+MqPysJwGc3lSsA/AjPZntEXfYXbR8UXPbAFsSR7iJmJsfaYqx6GCjis7Nv
+=dzB8
+-----END PGP SIGNATURE-----
