@@ -1,0 +1,28 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sexp_processor/sexp_processor-4.5.1.ebuild,v 1.1 2015/04/28 04:54:23 graaff Exp $
+
+EAPI=5
+
+USE_RUBY="ruby19 ruby20 ruby21 ruby22"
+
+RUBY_FAKEGEM_RECIPE_DOC="rdoc"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="README.txt History.txt"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Processor for s-expressions created as part of the ParseTree project"
+HOMEPAGE="http://www.zenspider.com/ZSS/Products/ParseTree/"
+
+LICENSE="GPL-2"
+SLOT="4"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE=""
+
+ruby_add_bdepend "
+	test? (
+		>=dev-ruby/hoe-3.13
+		dev-ruby/hoe-seattlerb
+		>=dev-ruby/minitest-5.5
+	)"
