@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sexp_processor
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sexp_processor/ChangeLog,v 1.38 2015/01/18 03:10:02 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sexp_processor/ChangeLog,v 1.39 2015/04/28 04:54:23 graaff Exp $
+
+*sexp_processor-4.5.1 (28 Apr 2015)
+
+  28 Apr 2015; Hans de Graaff <graaff@gentoo.org> +sexp_processor-4.5.1.ebuild:
+  Version bump.
 
 *sexp_processor-4.4.5 (18 Jan 2015)
 
